@@ -108,20 +108,26 @@ void pocl_cache_program_bc_path(char*        program_bc_path,
                        device_i, POCL_PROGRAM_BC_FILENAME);
 }
 
+/* If global_offset_is_zero is 1, we'll refer to a global offset
+   specialized kernel with static global offset of (0,0,0).
+   Otherwise, assume dynamic global offset. */
 void pocl_cache_kernel_cachedir_path (char* kernel_cachedir_path,
-                                             cl_program program,
-                                             unsigned device_i,
-                                             cl_kernel kernel,
-                                             const char* append_str,
-                                             size_t local_x,
-                                             size_t local_y,
-                                             size_t local_z)
+				      cl_program program,
+				      unsigned device_i,
+				      cl_kernel kernel,
+				      const char* append_str,
+				      size_t local_x,
+				      size_t local_y,
+				      size_t local_z,
+				      int assume_zero_global_offset)
 {
   int bytes_written;
   char tempstring[POCL_FILENAME_LENGTH];
   bytes_written = snprintf(tempstring, POCL_FILENAME_LENGTH,
-			   "/%s/%zu-%zu-%zu%s", kernel->name,
-			   local_x, local_y, local_z, append_str);
+			   "/%s/%zu-%zu-%zu%s%s", kernel->name,
+			   local_x, local_y, local_z,
+			   assume_zero_global_offset ? ("-goffs0") : (""),
+			   append_str);
   assert(bytes_written > 0 && bytes_written < POCL_FILENAME_LENGTH);
 
   program_device_dir(kernel_cachedir_path, program, device_i, tempstring);
@@ -142,20 +148,27 @@ pocl_cache_kernel_cachedir (char *kernel_cachedir_path, cl_program program,
 
 // required in llvm API
 void pocl_cache_work_group_function_path(char* parallel_bc_path, cl_program program,
-                               unsigned device_i, cl_kernel kernel,
-                               size_t local_x, size_t local_y,
-                               size_t local_z) {
+					 unsigned device_i, cl_kernel kernel,
+					 size_t local_x, size_t local_y,
+					 size_t local_z,
+					 int assume_zero_global_offset)
+{
     assert(kernel->name);
 
     pocl_cache_kernel_cachedir_path(parallel_bc_path, program,
-                         device_i, kernel, POCL_PARALLEL_BC_FILENAME,
-                         local_x, local_y, local_z);
+				    device_i, kernel,
+				    POCL_PARALLEL_BC_FILENAME,
+				    local_x, local_y, local_z,
+				    assume_zero_global_offset);
 }
 
-void pocl_cache_final_binary_path(char* final_binary_path, cl_program program,
-                               unsigned device_i, cl_kernel kernel,
-                               size_t local_x, size_t local_y,
-                               size_t local_z) {
+void pocl_cache_final_binary_path(char* final_binary_path,
+				  cl_program program,
+				  unsigned device_i, cl_kernel kernel,
+				  size_t local_x, size_t local_y,
+				  size_t local_z,
+				  int assume_zero_global_offset)
+{
     assert(kernel->name);
 
 
@@ -177,8 +190,9 @@ void pocl_cache_final_binary_path(char* final_binary_path, cl_program program,
     assert(bytes_written > 0 && bytes_written < POCL_FILENAME_LENGTH);
 
     pocl_cache_kernel_cachedir_path(final_binary_path, program,
-                         device_i, kernel, final_binary_name,
-                         local_x, local_y, local_z);
+				    device_i, kernel, final_binary_name,
+				    local_x, local_y, local_z,
+				    assume_zero_global_offset);
 }
 
 /******************************************************************************/
@@ -318,12 +332,15 @@ int pocl_cache_write_kernel_parallel_bc(void*        bc,
                                         cl_kernel    kernel,
                                         size_t       local_x,
                                         size_t       local_y,
-                                        size_t       local_z) {
+                                        size_t       local_z,
+					int assume_zero_global_offset)
+{
     assert(bc);
 
     char kernel_parallel_path[POCL_FILENAME_LENGTH];
     pocl_cache_kernel_cachedir_path(kernel_parallel_path, program, device_i,
-                                    kernel, "", local_x, local_y, local_z);
+                                    kernel, "", local_x, local_y, local_z,
+				    assume_zero_global_offset);
     int err = pocl_mkdir_p(kernel_parallel_path);
     if (err)
       return err;
